# cloudviewer

./: CMakeLists.txt  README.md
modules/: CMakeLists.txt
shaders/: billboard.fs  billboard.vs  fragment.fs  point_xyz_cloud.fs  point_xyz_cloud.gs  point_xyz_cloud.vs  point_xyzrgb_cloud.fs  point_xyzrgb_cloud.gs  point_xyzrgb_cloud.vs  simplefrag.fs  vertex.vs
shaders/debug/: mvp_color.vs
src/: CMakeLists.txt  DepthFrame.cpp  DepthFrame.hpp  Image.hpp  Log.hpp  PointCloud.cpp  PointCloud.hpp  TimeSeriesFrame.hpp  main.cpp  window_helpers.cpp  window_helpers.hpp
src/nimbus/: Scene.cpp  Scene.hpp  SimplePclConverter.cpp  SimplePclConverter.hpp  glitter.hpp
src/nimbus/entities/: AxesEntity.cpp  AxesEntity.hpp  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  FixedShaderEntity.hpp  PointXYZCloudEntity.cpp  PointXYZCloudEntity.hpp
src/nimbus/shaders/: CameraShaderProgram.hpp  GlobalColorShaderProgram.hpp  MvpShader.cpp  MvpShader.hpp  PointXYZCloudShader.cpp  PointXYZCloudShader.hpp  Shader.cpp  Shader.hpp  Uniform.hpp
src/nimbus/utils/: Color.cpp  Color.hpp  math.hpp
